--- a/client/src/components/dashboard/events/event-information/share/Share.scss
+++ b/client/src/components/dashboard/events/event-information/share/Share.scss
@@ -15,6 +15,7 @@
     border-radius: 5px;
     margin: 0 20px 20px;
     cursor: pointer;
+    overflow: hidden;
 
     input {
       background: none;
